@@ -43,7 +43,16 @@
   </publications>
   <dependencies>
     <dependency org="checkstyle" name="checkstyle" rev="${checkstyle.version}"
-      conf="checkstyle->default"/>
+      conf="checkstyle->master"/>
+    <dependency org="antlr" name="antlr" rev="${antlr.version}"
+      conf="checkstyle->master"/>
+    <dependency org="commons-beanutils" name="commons-beanutils-core" rev="${commons-beanutils.version}"
+      conf="checkstyle->master"/>
+    <dependency org="commons-logging" name="commons-logging" rev="${commons-logging.version}"
+      conf="checkstyle->master"/>
+    <dependency org="commons-cli" name="commons-cli" rev="${commons-cli.version}"
+      conf="checkstyle->master"/>
+    
     <dependency org="jdiff" name="jdiff" rev="${jdiff.version}"
       conf="jdiff->default"/>
     <dependency org="xerces" name="xerces" rev="${xerces.version}"
