@@ -15,7 +15,11 @@
 
 #These are the versions of our dependencies (in alphabetical order)
 apacheant.version=1.7.1
+antlr.version=2.7.6
 
+commons-beanutils.version=1.7.0
+commons-cli.version=1.0
+commons-logging.version=1.0.3
 checkstyle.version=4.2
 
 ivy.version=2.0.0-rc2
